Fixed recipe edit buttons from covering form elements

--- a/src/app/recipes/recipe-edit/recipe-edit.component.scss
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.scss
@@ -1,4 +1,5 @@
 .recipe-edit-container {
+  margin-bottom: 3rem;
   padding: 2rem;
 }
 
